namespace Splitter.BCMenu.Models;

public class MenuLayout
{
    public Guid Id { get; set; }
    public Guid MenuId { get; set; }
    public string? Layout { get; set; }
}