namespace Splitter.Operations.WebApi;

#pragma warning disable IDE1006 // Naming Styles
public record ProductDto(Guid id, string name, decimal price);
#pragma warning restore IDE1006 // Naming Styles